crates/libs/lib-core/tests/ui/authorization/context_action_is_not_subject_action.stderr
error[E0308]: mismatched types
  --> tests/ui/authorization/context_action_is_not_subject_action.rs:10:28
   |
10 |     let _ = authorize_subject(action, snapshot);
   |             ----------------- ^^^^^^ expected `SubjectActionId`, found `ContextActionId<Existing<CaseResource>>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected struct `SubjectActionId`
              found struct `ContextActionId<lib_core::authorization::Existing<CaseResource>>`
note: function defined here
  --> src/authorization/kernel.rs
   |
   | pub fn authorize_subject(
   |        ^^^^^^^^^^^^^^^^^
